# esg-matching

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  pre_release.yml  release.yml
data/test/: test_data_source1.csv  test_data_source1.json  test_data_source2.csv  test_data_source2.json  test_data_source3.csv  test_data_source3.json
docs/source/: code.rst  conf.py  esg_matching.data_source.rst  esg_matching.engine.builders.rst  esg_matching.engine.connectors.rst  esg_matching.engine.executor.rst  esg_matching.engine.rst  esg_matching.exceptions.rst  esg_matching.file_reader.rst  esg_matching.matcher.rst  esg_matching.processing.rst  esg_matching.report.rst  index.rst  matching.rst
esg_matching/: __init__.py
esg_matching/data_source/: __init__.py  db_match.py  db_source.py
esg_matching/db_data_source/: db_data_source.py  db_match_data_source.py
esg_matching/db_matcher/: db_matcher.py  db_matcher_dfm.py  db_matcher_drm.py  db_matcher_ifm.py  matching_policy.py
esg_matching/engine/: __init__.py
esg_matching/exceptions/: exceptions_builders.py  exceptions_data_source.py  exceptions_db_engine.py  exceptions_matching_policy.py  exceptions_settings.py
esg_matching/file_reader/: __init__.py  base_reader.py  csv_reader.py  file.py  file_reader.py  file_reader_csv.py  file_settings.py  file_utils.py  settings.py
esg_matching/matcher/: db_matcher.py  dfm.py  drm.py  irm.py  policy.py
esgmatching/: exceptions.py
tests/: test_db_connection.py  test_exact_matching.py  test_load_data_to_db.py  test_mapping_data_source.py
(+136 files in other folders)
