[tool.poetry]
name = "esg-matching"
version = "0.2.0"
description = "Entity matching of several data sources"
authors = ["Os-Climate Foundation <test_os-climate@gmail.com>"]
license = "Apache 2"
readme = "README.md"
homepage = "https://github.com/os-climate/esg-matching"
repository = "https://github.com/os-climate/esg-matching"
keywords = ["entity matching", "matching", "esg matching"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

include = [
    "LICENSE.md",
]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''

[tool.poetry.scripts]
test = 'scripts:test'

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
SQLAlchemy = ">=1.4.21"
cx_Oracle = ">=8.3.0"
pandas = ">=1.4.0"
sqlalchemy-trino = ">=0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
